@@ -637,7 +637,7 @@ class RstToPdf(object):
                 elem = OutlineEntry(key, unescape(text), depth - 1, snum)
                 elem.parent_id = node.parent.get('ids', [None])[0]
                 node.elements = [KeepTogether([elem,
-                    Paragraph(text, self.styles['heading%d' % min(depth, 3)])])]
+                    Paragraph(text, self.styles['heading%d' % min(depth, 6)])])]
                 if depth <= self.breaklevel:
                     node.elements.insert(0, MyPageBreak())
 
